Finish Auth Service
* fix bugs

* test swagger and doc

* Add middleware and cookie

* refactor: Unify API response formats and update Swagger docs

* Add Mongo-Express and refactor for ease of development; Modify go default path in the dev container; Add documentation

* fixed hardcode and added readme

* Replaced context.TODO() with request context, added comments for user-related functions, removed useless codes.
